--- a/home.html
+++ b/home.html
@@ -6,6 +6,11 @@
         <title>Fashion</title>
         <link rel="stylesheet" href="style/home.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+
+        <!-- Sử dụng thư viện bên ngoài -->
+        <!-- toastify -->
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+        <!-- document: https://github.com/apvarun/toastify-js -->
     </head>
     <body>
         <div class="app">
@@ -17,7 +22,10 @@
                             <a href="search.html"> <i class="fa-solid fa-magnifying-glass"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i></a>
+                            <div class="nav-cart">
+                                <a href="cart.html"> <i class="fa-solid fa-cart-shopping"></i></a>
+                                <span class="nav-cart-length">0</span>
+                            </div>
                         </li>
                     </ul>
                 </nav>
@@ -58,4 +66,5 @@
         </div>
     </body>
     <script type="module" src="script/home.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </html>
