display by seasonal or category

--- a/home.html
+++ b/home.html
@@ -16,10 +16,14 @@
         <div class="app">
             <header class="header">
                 <h1><a href="home.html">Fashion</a></h1>
+                <div class="tabs">
+                    <button class="tab-item active" data-tab="seasonal">Quần áo theo mùa</button>
+                    <button class="tab-item" data-tab="category">Quần áo theo danh mục</button>
+                </div>
                 <nav class="nav">
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a href="search.html"> <i class="fa-solid fa-magnifying-glass"></i></a>
+                            <a href="search.html"><i class="fa-solid fa-magnifying-glass"></i></a>
                         </li>
                         <li class="nav-item">
                             <div class="nav-cart">
