--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
         <title>Fashion</title>
         <link rel="stylesheet" href="style/home.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-
+        <link rel="stylesheet" href="style/model.css" />
+        <link rel="stylesheet" href="style/product.css" />
         <!-- Sử dụng thư viện bên ngoài -->
         <!-- toastify -->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
@@ -44,21 +45,7 @@
 
                 <!-- CONTENT -->
                 <section id="content">
-                    <div class="content-container">
-                        <h2 class="content-title">Sản phẩm</h2>
-                        <ul class="content-list">
-                            <li class="content-item">
-                                <img
-                                    src="https://product.hstatic.net/1000312752/product/aplt233-3__4__b0450ae785194be8bdf0bfb3275fbee2.jpg"
-                                    alt="Áo sơ mi nam"
-                                />
-                                <div class="content-item-info">
-                                    <h3>Áo sơ mi nam</h3>
-                                    <p>100.000đ</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                    <div class="content-container"></div>
                 </section>
             </main>
         </div>
