--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
             <header class="header">
                 <h1><a href="home.html">Fashion</a></h1>
                 <div class="tabs">
-                    <button class="tab-item active" data-tab="seasonal">Quần áo theo mùa</button>
-                    <button class="tab-item" data-tab="category">Quần áo theo danh mục</button>
+                    <button class="tab-item active" data-tab="category">Quần áo theo danh mục</button>
+                    <button class="tab-item" data-tab="seasonal">Quần áo theo mùa</button>
                 </div>
                 <nav class="nav">
                     <ul class="nav-list">
@@ -44,9 +44,7 @@
                 </aside>
 
                 <!-- CONTENT -->
-                <section id="content">
-                    <div class="content-container"></div>
-                </section>
+                <section id="product-list"></section>
             </main>
         </div>
 
