--- a/search.html
+++ b/search.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" href="style/model.css" />
         <link rel="stylesheet" href="style/product.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+        <!-- Sử dụng thư viện bên ngoài -->
+        <!-- toastify -->
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+        <!-- document: https://github.com/apvarun/toastify-js -->
     </head>
     <body>
         <div class="app">
@@ -31,4 +35,5 @@
         </div>
     </body>
     <script type="module" src="script/search.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </html>
