--- a/search.html
+++ b/search.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="style/variable.css" />
         <link rel="stylesheet" href="style/search.css" />
         <link rel="stylesheet" href="style/model.css" />
         <link rel="stylesheet" href="style/product.css" />
@@ -23,7 +24,8 @@
                 <button>Tìm kiếm</button>
             </div>
             <main class="main">
-                <h2 class="product-title">Kết quả tìm kiếm</h2>
+                <h2 class="product-title">Kết quả tìm kiếm:</h2>
+
                 <ul class="product-list"></ul>
             </main>
         </div>
