--- a/home.html
+++ b/home.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Fashion</title>
+        <link rel="stylesheet" href="style/variable.css" />
+        <link rel="stylesheet" href="style/header.css" />
         <link rel="stylesheet" href="style/home.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
         <link rel="stylesheet" href="style/model.css" />
         <link rel="stylesheet" href="style/product.css" />
+
         <!-- Sử dụng thư viện bên ngoài -->
         <!-- toastify -->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
