--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,9 @@
     </head>
     <body>
         <main class="main">
+            <header class="cart-header">
+                <h1>Giỏ hàng</h1>
+            </header>
             <ul class="product-list"></ul>
 
             <div class="model">
