--- a/home.html
+++ b/home.html
@@ -35,6 +35,9 @@
                                 <span class="nav-cart-length">0</span>
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <a href="manager.html"><i class="fa-solid fa-bars-progress"></i></a>
+                        </li>
                     </ul>
                 </nav>
             </header>
