add button back to home

--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,7 @@
     </head>
     <body>
         <main class="main">
+            <a class="back-btn" href="home.html">Trở về trang chủ</a>
             <header class="cart-header">
                 <h1>Giỏ hàng</h1>
             </header>
