--- a/search.html
+++ b/search.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <div class="app">
+            <a class="back-btn" href="home.html">Trở về trang chủ</a>
             <div class="search-container">
                 <div class="input-group">
                     <input type="text" id="search-input" placeholder=" " />
