--- a/manager.html
+++ b/manager.html
@@ -15,6 +15,7 @@
     </head>
     <body>
         <div class="app">
+            <a class="back-btn" href="home.html">Trở về trang chủ</a>
             <h1 class="app-title">Quản lý sản phẩm</h1>
 
             <header class="app-header">
